--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>jZlecenia</title>
+    <title>jZwroty</title>
     <th:block th:include="layout/header"></th:block>
 </head>
 <body>
