--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -28,6 +28,7 @@
                     </li>
                 </ul>
             </div>
+            <a class="navbar-brand btn btn-danger" th:href="@{/koniec}">KONIEC!</a>
         </nav>
     </div>
 </div>
